# fall2021-cs121-lab1

./: .clang-format  .gitignore  AIO.fish  CMakeLists.txt  init.fish  note.md  report.md
data/: download-data.fish  edges_to_mm.py  gen-RMAT.fish  nx_bfs.py  prepare_data.fish  random_source.py
report/: content.md  env.md  gen.fish  reference.bib  report.tex
report/re-record-AIcluster/: benchmark_parallel_10  benchmark_parallel_12  benchmark_parallel_14  benchmark_parallel_16  benchmark_parallel_18  benchmark_parallel_2  benchmark_parallel_20  benchmark_parallel_4  benchmark_parallel_6  benchmark_parallel_8  benchmark_serial
report/record/: benchmark_parallel_1  benchmark_parallel_10  benchmark_parallel_11  benchmark_parallel_12  benchmark_parallel_13  benchmark_parallel_14  benchmark_parallel_15  benchmark_parallel_16  benchmark_parallel_17  benchmark_parallel_18  benchmark_parallel_19  benchmark_parallel_2  benchmark_parallel_20  benchmark_parallel_21  benchmark_parallel_22  benchmark_parallel_23  benchmark_parallel_24  benchmark_parallel_25  benchmark_parallel_26  benchmark_parallel_27  benchmark_parallel_28  benchmark_parallel_29  benchmark_parallel_3  benchmark_parallel_30  benchmark_parallel_4  benchmark_parallel_5  benchmark_parallel_6  benchmark_parallel_7  benchmark_parallel_8  benchmark_parallel_9  benchmark_serial
report/record-local/: benchmark_parallel_1  benchmark_parallel_10  benchmark_parallel_11  benchmark_parallel_12  benchmark_parallel_13  benchmark_parallel_14  benchmark_parallel_15  benchmark_parallel_16  benchmark_parallel_2  benchmark_parallel_3  benchmark_parallel_4  benchmark_parallel_5  benchmark_parallel_6  benchmark_parallel_7  benchmark_parallel_8  benchmark_parallel_9  benchmark_serial
src/: .clangd  CMakeLists.txt  adjmat.cpp  adjmat.hpp  bitset.cpp  bitset.hpp  common.hpp  data_structure.cpp  data_structure.hpp  io_only.cpp  matrix.cpp  matrix.hpp  parallel-bfs.cpp  serial-bfs.cpp  snap_to_mm.cpp  test.cpp
